# Database_Course_Experiment

./: .gitignore  CMakeLists.txt  README.md  implementation_plan.md  operation.md  readme.md  stage2_result.md
docs/: acceptance_checklist.md  acceptance_q_and_a.md  chinese_input_guide.md  code_structure_and_principles.md  data_and_tests.md  data_engineering.md  data_engineering_result.md  experiment_report_submission_guide.md  fcitx_pinyin_guide.md  final_acceptance_package.md  github_upload.md  implementation_plan.md  operation.md  operation_guide.md  planning_and_work.md  project_structure.md  report_materials.md  sql_code_analysis.md  stage1_result.md  stage2_result.md  system_design.md  system_framework.md  teacher_demo_10w.md  usage.md  work.md
scripts/: check_chinese_input.sh  run_wsl.sh  setup_fcitx_wsl.sh
sql/: 01_schema.sql  02_indexes.sql  03_triggers.sql  04_core_queries.sql  05_load_generated_csv.sql  05_seed_small.sql  06_export_branch.sql  06_stage1_check.sql  07_performance_explain.sql  07_seed_demo.sql  08_load_generated_csv.sql  09_export_branch.sql  10_performance_explain.sql  README.md
src/: main.cpp
src/db/: DatabaseManager.cpp  DatabaseManager.h  GenealogyDao.cpp  GenealogyDao.h  MemberDao.cpp  MemberDao.h  RelationDao.cpp  RelationDao.h  UserDao.cpp  UserDao.h
src/model/: Genealogy.h  Member.h  RelationPath.h  User.h
src/service/: AuthService.cpp  AuthService.h  DashboardService.cpp  DashboardService.h  TreeService.cpp  TreeService.h
src/ui/: GenealogyDialog.cpp  GenealogyDialog.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  (+3 more)
test/: CMakeLists.txt  main.cpp  run_wsl.sh  setup_fcitx_wsl.sh  stage2_smoke.cpp
test/build-wsl/: CMakeCache.txt  GenealogySystem  build.ninja  cmake_install.cmake
test/build-wsl/GenealogySystem_autogen/: deps  mocs_compilation.cpp
test/build-wsl/GenealogySystem_autogen/UYX5XTB5RZ/: moc_GenealogyDialog.cpp  moc_GenealogyDialog.cpp.d  moc_LoginWindow.cpp  moc_LoginWindow.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MemberDialog.cpp  moc_MemberDialog.cpp.d
test/db/: GenealogyDao.cpp  GenealogyDao.h  MemberDao.cpp  RelationDao.cpp  RelationDao.h  UserDao.h
test/model/: RelationPath.h  User.h
test/service/: AuthService.cpp  DashboardService.h  TreeService.cpp  TreeService.h
test/ui/: GenealogyDialog.cpp  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MemberDialog.cpp  MemberDialog.h
tests/: stage2_smoke.cpp
tools/: generate_data.py
